[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
sea-orm = "0.10.2"
serde = { version = "1.0.130", features = ["derive"] }

[dependencies.sea-orm-migration]
version = "0.10.2"
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
