[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.10.2"
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
